--- a/calculateArea/calculate_Area.html
+++ b/calculateArea/calculate_Area.html
@@ -16,6 +16,21 @@
     <button onclick="calculateArea()">Calculate Area</button><br><br>
 
     <p id="result"></p>
+    
+    <hr>
+
+    <h1>Grocery Tracker</h1>
+    <label for="grocery1">Enter 1st grocery amount:</label>
+    <input type="number" id="grocery1"><br><br>
+
+    <label for="grocery2">Enter 2nd grocery amount:</label>
+    <input type="number" id="grocery2"><br><br>
+
+    <label for="grocery3">Enter 3rd grocery amount:</label>
+    <input type="number" id="grocery3"><br><br>
+
+    <button onclick=groceryTracker()>Calculate Total Amount</button>
+    <p id="groceryResult"></p>
     <script src="./calculate_Area.js"></script>
 </body>
 </html>
