Functions closures and hosting: followers count (Practice task)

--- a/followersCount/followers_count.html
+++ b/followersCount/followers_count.html
@@ -13,5 +13,9 @@
     <h2>Click one button to follow</h2>
     <button onclick="increaseCount()">Follow</button>
     <script src="./followers_count.js"></script>
+    <hr>
+    <h2>Click one button to reset</h2>
+    <button onclick="resetCount()">Reset</button>
+    <script src="./followers_count.js"></script>
 </body>
 </html>
