--- a/colorfulMemoryGame/colorful_memory_game.html
+++ b/colorfulMemoryGame/colorful_memory_game.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Colorful Memory Match Game</h1>
   <div class="container">
-    <div class="game-container">
+    <div id="game-container">
       <!-- Cards will be generated dymically using JavaScript -->
     </div>
     <div class="startMain">
